# lazaza-assessment

./: README.md  entrypoint.py  pyproject.toml
src/clients/: image_upscale_client.py  images.json
src/processors/: abstract_processor.py  image_processor.py
tests/clients/: test_image_upscale_client.py
tests/processors/: test_image_processor.py
tests/resources/: test_image.json
